--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:windowSoftInputMode="adjustPan|adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".BookActivity"></activity>
-        <activity android:name=".AutoreActivity"></activity>
-        <activity android:name=".BarCodeActivity"></activity>
+        <activity
+            android:name=".BookActivity"
+            android:windowSoftInputMode="adjustPan|adjustResize"/>
+        <activity android:name=".AutoreActivity"/>
+        <activity android:name=".BarCodeActivity"/>
     </application>
 
 </manifest>
